# KCSP

./: .gitignore  CMakeLists.txt
MiniProject1/: 100_mil_hash_1_inde_pointer.txt  100_mil_hash_1_inde_ref.txt  18_mil_hash_1_inde_pointer.txt  18_mil_hash_1_inde_ref.txt  CMakeLists.txt  Concurrent_Partitioning_Algorithm.cpp  Concurrent_Partitioning_Algorithm.h  DataGenerator.cpp  Independent_Partitioning_Algorithm.cpp  Independent_Partitioning_Algorithm.h  Main  Main.cpp  Makefile  Program  Program.cpp  TupleGenerator.cpp  TupleGenerator.h  newtest.txt  newtest2.txt  run.sh  test
MiniProject1/Main.dSYM/Contents/Resources/DWARF/: Main
MiniProject1/Program.dSYM/Contents/: Info.plist
MiniProject1/Program.dSYM/Contents/Resources/DWARF/: Program
MiniProject2/: benchmark-multi.py  benchmark-single.py
